# prova/app/Models/Produto.php
@@ -10,12 +10,15 @@ class Produto extends Model
     use HasFactory;
     protected $table = 'produtos';
 
+    protected $hidden = ['pivot'];
+
     protected $fillable = [
         'nome',
         'preco',
     ];
 
-    public function comandas() {
+    public function comandas()
+    {
         return $this->belongsToMany(Comanda::class, 'comanda_produtos', 'idProduto', 'idComanda');
     }
 }
